/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2025-10-30 00:19 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * base/GNU.txt
  * base/Makefile
    * self-modifying bootstrap BSD to GNU, only to activate
      missing feature of work dir override

  * base/pmgr/Makefile
  * base/xz-current/Makefile
  * base/xz-inherit/Makefile
  * base/xz/Makefile
    ! switch to boot.mk

  * build/libpq8/Makefile
  * build/libpq9/Makefile
    ! typo in path

2025-10-29 23:11 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + boot.mk
  * common.mk
  * base/Makefile
    * improve make compat in base stage, to bootstrap GNU
      Make eventually

  * build/harbour-core-onedir/Makefile
    * ignore symlink creation, Windows/MSYS2 @ GitHub Runner
      goes for issues

2025-10-29 18:00 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * base/Makefile
    + HBPK_BOOTSTRAP=yes allow 1st stage bootstrap using
      non GNU make(?)

  * base/xz-inherit/Makefile
    * shuffled pkg version number to 0

  * build/libpq8/Makefile
  * build/libpq9/Makefile
    * shuffled package names to libpq, major version
      number added to PKGVER - actually these can't coexist
      on system paths - header files will collide.
    * use $(HBPK_CC_FAMILY)

  * build/openssl/Makefile
  * build/zlib/Makefile
    * use $(HBPK_CC_FAMILY)

  * common.mk
    + set HBPK_CC_FAMILY = CC=clang when zig is detected

    + set HB_ZIG_TARGET={cpu}-windows-gnu when MSYS2 shell
      is detected 

  * hbinfo.mk
    + set HBPK_CC_FAMILY = CC=clang when zig is detected,
      this one uses information returned by hbmk2 --hbinfo

2025-10-29 13:39 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * libpq8/Makefile
  * libpq9/Makefile
    * tie to CC=clang
      later will be translated to $(HBPK_CC_FAMILY) macro of
      some sort

  * git -> interix-git