@@ -3,6 +3,13 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2025-10-30 01:50 UTC+0100 Aleksander Czajczynski (hb fki.pl)
+  * common.mk
+    * indent
+
+  * hbinfo.mk
+    * supply .exe bin extension while locating hbmk2 on win
+
 2025-10-30 00:19 UTC+0100 Aleksander Czajczynski (hb fki.pl)
   * base/GNU.txt
   * base/Makefile
